--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     Hello world!
+    <script src="./objRender.js"></script>
+    <script>
+        alert(window.objRender.key)
+        let objRender2 = require('./objRender2')
+        alert(objRender2.key + 1)
+    </script>
 </body>
 </html>
