fix: 使用electron8版本

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="./objRender.js"></script>
     <script>
         alert(window.objRender.key)
-        let objRender2 = require('./objRender2')
-        alert(objRender2.key + 1)
+        alert(window.objRender2.key)
+       
     </script>
 </body>
 </html>
