--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
 <body>
     Hello world!
     <button id="openDevToolsBtn">打开开发者工具</button>
+    <button id="makeNewWindow">打开一个新窗口</button>
     <script src="./objRender.js"></script>
     <script>
-        alert(window.objRender.key)
-        alert(window.objRender2.key)
+        // alert(window.objRender.key)
+        // alert(window.objRender2.key)
        
         let {remote} = require('electron')
         document.querySelector('#openDevToolsBtn').addEventListener('click',function(){
             // remote.getCurrentWindow().webContents.openDevTools()
             remote.getCurrentWebContents().openDevTools()
+        })
+
+
+        let win = null
+        document.querySelector('#makeNewWindow').addEventListener('click',function(){
+            win = new remote.BrowserWindow({
+                webPreferences:{nodeIntegration:true}
+            })
+            win.loadFile('index.html')
         })
     </script>
 </body>
